# docs/v1/swagger.yaml
@@ -1993,6 +1993,15 @@ definitions:
     required:
     - matchType
     type: object
+  request.KnowledgeMetaValueListReq:
+    properties:
+      docIdList:
+        items:
+          type: string
+        type: array
+    required:
+    - docIdList
+    type: object
   request.KnowledgeSelectReq:
     properties:
       name:
@@ -2527,6 +2536,22 @@ definitions:
     required:
     - tagId
     - tagName
+    type: object
+  request.UpdateMetaValueReq:
+    properties:
+      applyToSelected:
+        type: boolean
+      docIdList:
+        items:
+          type: string
+        type: array
+      metaValueList:
+        items:
+          $ref: '#/definitions/request.DocMetaData'
+        type: array
+    required:
+    - applyToSelected
+    - docIdList
     type: object
   request.UpdateSensitiveWordTableReplyReq:
     properties:
@@ -3570,6 +3595,30 @@ definitions:
         type: string
       metaKey:
         type: string
+      metaValue:
+        description: 确定值
+        type: string
+      metaValueType:
+        type: string
+    type: object
+  response.KnowledgeMetaValueListResp:
+    properties:
+      knowledgeMetaValues:
+        items:
+          $ref: '#/definitions/response.KnowledgeMetaValues'
+        type: array
+    type: object
+  response.KnowledgeMetaValues:
+    properties:
+      metaId:
+        type: string
+      metaKey:
+        type: string
+      metaValue:
+        description: 确定值
+        items:
+          type: string
+        type: array
       metaValueType:
         type: string
     type: object
@@ -7067,6 +7116,58 @@ paths:
       security:
       - JWT: []
       summary: 获取知识库元数据
+      tags:
+      - knowledge
+  /knowledge/meta/value:
+    get:
+      consumes:
+      - application/json
+      description: 获取文档元数据列表
+      parameters:
+      - description: 文档元数据列表请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.KnowledgeMetaValueListReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/response.KnowledgeMetaValueListResp'
+              type: object
+      security:
+      - JWT: []
+      summary: 获取文档元数据列表
+      tags:
+      - knowledge
+    post:
+      consumes:
+      - application/json
+      description: 更新知识库元数据值
+      parameters:
+      - description: 更新知识库元数据值请求参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateMetaValueReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - JWT: []
+      summary: 更新知识库元数据值
       tags:
       - knowledge
   /knowledge/select:
