# internal/bff-service/server/http/handler/v1/knowledge.go
@@ -112,7 +112,7 @@ func KnowledgeHit(ctx *gin.Context) {
 	gin_util.Response(ctx, resp, err)
 }
 
-// GetKnowledgeMetaSelect
+// GetKnowledgeMetaKeySelect
 //
 //	@Tags			knowledge
 //	@Summary		获取知识库元数据
@@ -123,7 +123,7 @@ func KnowledgeHit(ctx *gin.Context) {
 //	@Param			data	body		request.GetKnowledgeMetaSelectReq	true	"获取知识库元数据请求参数"
 //	@Success		200		{object}	response.Response{data=response.GetKnowledgeMetaSelectResp}
 //	@Router			/knowledge/meta/select [get]
-func GetKnowledgeMetaSelect(ctx *gin.Context) {
+func GetKnowledgeMetaKeySelect(ctx *gin.Context) {
 	userId, orgId := getUserID(ctx), getOrgID(ctx)
 	var req request.GetKnowledgeMetaSelectReq
 	if !gin_util.BindQuery(ctx, &req) {
@@ -131,4 +131,46 @@ func GetKnowledgeMetaSelect(ctx *gin.Context) {
 	}
 	resp, err := service.GetKnowledgeMetaSelect(ctx, userId, orgId, &req)
 	gin_util.Response(ctx, resp, err)
+}
+
+// GetKnowledgeMetaValueList
+//
+//	@Tags			knowledge
+//	@Summary		获取文档元数据列表
+//	@Description	获取文档元数据列表
+//	@Security		JWT
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		request.KnowledgeMetaValueListReq	true	"文档元数据列表请求参数"
+//	@Success		200		{object}	response.Response{data=response.KnowledgeMetaValueListResp}
+//	@Router			/knowledge/meta/value/list [post]
+func GetKnowledgeMetaValueList(ctx *gin.Context) {
+	userId, orgId := getUserID(ctx), getOrgID(ctx)
+	var req request.KnowledgeMetaValueListReq
+	if !gin_util.Bind(ctx, &req) {
+		return
+	}
+	resp, err := service.GetKnowledgeMetaValueList(ctx, userId, orgId, &req)
+	gin_util.Response(ctx, resp, err)
+}
+
+// UpdateKnowledgeMetaValue
+//
+//	@Tags			knowledge
+//	@Summary		更新知识库元数据值
+//	@Description	更新知识库元数据值
+//	@Security		JWT
+//	@Accept			json
+//	@Produce		json
+//	@Param			data	body		request.UpdateMetaValueReq	true	"更新知识库元数据值请求参数"
+//	@Success		200		{object}	response.Response
+//	@Router			/knowledge/meta/value/update [post]
+func UpdateKnowledgeMetaValue(ctx *gin.Context) {
+	userId, orgId := getUserID(ctx), getOrgID(ctx)
+	var req request.UpdateMetaValueReq
+	if !gin_util.Bind(ctx, &req) {
+		return
+	}
+	err := service.UpdateKnowledgeMetaValue(ctx, userId, orgId, &req)
+	gin_util.Response(ctx, nil, err)
 }
